--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="preload" href="fonts/KumbhSans-Medium.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/KumbhSans-Regular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="./styles/main.css">
-  <script src="./scripts/main.js" type="module" defer></script>
+  <script src="./scripts/main.js" type="module"></script>
 </head>
 
 <body class="page__body">
