fix: removed unnecessary content and returned scalable

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-    content="width=device-width, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Future Tech | Home</title>
   <link rel="preload" href="fonts/Inter-Bold.woff2" as="font" type="font/woff2" crossorigin>
@@ -62,77 +61,7 @@
       </div>
     </header>
 
-    <main class="main">
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam et officia aliquid ut veniam deserunt minus
-      dolorem beatae repellendus blanditiis mollitia sit voluptatem cum optio at eius voluptate ipsa, esse earum illo
-      repudiandae numquam qui nihil vel? Hic, debitis, delectus dolores reprehenderit minus vero ut soluta incidunt
-      doloribus laborum esse nam veritatis ipsum commodi odit. Maxime, impedit! Odio veritatis inventore similique
-      magnam eaque, quisquam repellendus possimus eveniet neque, sapiente maxime fugit corrupti in debitis vitae
-      repellat. Aspernatur, voluptate? Amet aliquid accusantium harum nostrum dolores corrupti repudiandae laborum vero
-      commodi suscipit repellendus alias quae laboriosam, nemo eos illum, animi modi. Impedit eveniet necessitatibus
-      illum vero iure unde alias enim doloremque exercitationem. Fugiat error assumenda eveniet iure ipsa, quos
-      obcaecati iste quo quam eos minima, aut esse ad ipsum harum! Tenetur ratione optio commodi, voluptates est
-      voluptas omnis rerum temporibus quo dolorem error modi? Est, consequuntur nemo provident amet atque incidunt earum
-      dolore minus ex inventore, numquam harum dolor! Quo perferendis ut corporis accusamus maiores. Perferendis qui
-      quae nihil obcaecati iusto ab, saepe aperiam repudiandae laboriosam necessitatibus? Dignissimos molestias dolor
-      similique eveniet alias. Laudantium expedita voluptate eum hic aperiam voluptates, commodi qui ipsam a iste id
-      doloribus. Libero a perferendis, magnam id maxime, non quisquam alias mollitia aut illo animi nam sequi
-      praesentium dicta aliquid ipsum ducimus sunt labore! Consequuntur doloremque rerum possimus labore, assumenda
-      omnis cupiditate animi natus, suscipit harum non excepturi reprehenderit quam eaque ullam itaque eveniet alias,
-      nemo laboriosam. Facere, cum dolores inventore debitis dolorem culpa asperiores accusamus eligendi, provident
-      minus accusantium ullam quas in rerum assumenda fugit natus doloremque dolorum, ducimus necessitatibus itaque
-      fugiat aspernatur. Praesentium eligendi iure eum aliquid similique minus aut deserunt maiores consequatur earum,
-      saepe, voluptas distinctio. Magni, at, nulla in id esse quo perspiciatis aliquid rem corrupti unde quae officiis
-      recusandae dignissimos eligendi aperiam ab accusamus ullam sequi tempore explicabo doloremque accusantium
-      molestiae saepe natus! Voluptatum corrupti quidem voluptate cum accusamus magni blanditiis incidunt, eligendi iure
-      dolor libero mollitia sint rerum molestias, similique est. Dolores iste necessitatibus sit minus? Ipsum accusamus
-      eius aliquid itaque reprehenderit dignissimos, explicabo ea tenetur impedit praesentium earum possimus
-      consequatur, iusto odit veritatis soluta asperiores assumenda nihil ullam quos. Obcaecati asperiores voluptatum
-      fuga eum magnam ipsam neque illum, voluptate quis minima enim beatae laboriosam non recusandae sint sapiente
-      veritatis doloribus a eaque molestias sit omnis soluta! Quis laboriosam neque corporis blanditiis libero eos
-      dolores aliquam, quibusdam nostrum molestiae beatae labore quia deserunt commodi sapiente odit ipsum magni quam
-      incidunt? Similique, soluta quaerat quae dignissimos laboriosam laudantium alias odio tenetur reiciendis delectus
-      vero animi officiis ad nostrum accusamus eligendi. Nulla, placeat quo a nostrum recusandae sapiente, amet, nemo
-      consequuntur eveniet sunt animi. Dolore, exercitationem impedit quo libero repudiandae dignissimos harum eius,
-      error incidunt iure nesciunt cumque inventore ab ad ipsum nostrum voluptatum omnis corrupti sapiente ullam.
-      Accusantium molestiae explicabo porro nemo voluptates necessitatibus ipsa unde impedit nobis, atque aspernatur
-      vero quis repellendus soluta vel ex deserunt veritatis vitae modi. Consequatur repellat laboriosam pariatur beatae
-      facere, eius cum tempora iure repudiandae voluptatibus vitae quaerat atque corrupti officiis inventore quisquam,
-      esse nobis itaque corporis commodi consectetur. Voluptate vel doloremque quam veniam animi est similique nisi, id
-      omnis officia autem doloribus quibusdam non aliquam accusamus dolor esse magni libero voluptatem architecto
-      ducimus nulla. Nisi qui sequi optio, officia, facere quam aut unde excepturi obcaecati et, omnis nostrum. Quis
-      sint illum iste, unde totam omnis reprehenderit aperiam quibusdam laudantium voluptates nihil, debitis
-      consequuntur itaque culpa sit doloremque voluptatem possimus. Sed sequi placeat deserunt corrupti, quis nam.
-      Quibusdam enim nesciunt recusandae deleniti possimus exercitationem, non sapiente adipisci impedit similique
-      distinctio est eum? Deserunt unde, maiores itaque iste eaque commodi fugiat voluptatibus, ab cupiditate ad
-      consectetur amet iure asperiores similique, eligendi magni dolorem est! Hic cumque aperiam facere culpa. Quas
-      deserunt harum qui officiis! Necessitatibus beatae, suscipit corrupti eligendi architecto debitis quas dicta!
-      Nobis sapiente suscipit consectetur, optio natus adipisci aliquid voluptatum molestiae praesentium ad commodi
-      ratione architecto, accusamus quo excepturi veritatis vero neque consequatur illum. Delectus porro doloribus
-      voluptatem esse optio accusantium deserunt neque corporis maxime, ducimus recusandae aut quibusdam rem pariatur
-      mollitia explicabo possimus quae quas nulla debitis est nihil nobis alias id. Ipsum atque ullam delectus
-      temporibus facere similique ad, sapiente corporis alias reiciendis odit magni deserunt? Aut voluptas eveniet eos
-      id, omnis odit illum dolore vero reprehenderit autem optio odio eum laudantium voluptates cumque neque minima
-      voluptatem maxime nihil? Consectetur distinctio vitae assumenda ab illum sed temporibus iusto quos? Quos cumque
-      totam impedit praesentium aut aliquid nobis voluptatem odio blanditiis pariatur, ea non distinctio modi fuga quae
-      explicabo consequuntur eaque nulla porro? Rerum quis expedita fugiat sint perspiciatis, odit molestias sit facere,
-      reprehenderit ipsam saepe magni harum odio itaque quibusdam? Cum voluptate labore, dolores neque sequi natus omnis
-      obcaecati doloremque consectetur velit eum fuga corrupti, mollitia laudantium illo asperiores a quis ad. Veniam at
-      saepe modi tempora rerum veritatis, unde laudantium deserunt, vero reprehenderit eligendi magnam officia. Omnis
-      fuga saepe illum. Officiis numquam quidem voluptates ipsum quae commodi eum dolores praesentium sunt enim illum,
-      ratione necessitatibus soluta sed, nulla voluptatum quibusdam quam fuga! Nam dicta consequatur praesentium aliquam
-      doloremque quam recusandae officia nisi earum, a, eum est id laboriosam. Vero officiis quas quae reiciendis
-      tenetur doloribus iure quis assumenda adipisci fuga? Tenetur magni reiciendis sapiente possimus dolores, quis rem
-      explicabo? Doloremque porro harum quisquam aperiam voluptates quis molestias recusandae placeat cupiditate
-      exercitationem sapiente officia quasi consectetur similique temporibus quam accusantium, eaque rerum! Harum
-      laudantium tenetur exercitationem nobis, perferendis iusto excepturi doloribus iure sit cumque, ullam quidem, eum
-      voluptas iste veniam. Veniam, minus. At vel nisi quasi eveniet animi molestias beatae accusantium dolor fugiat,
-      maiores debitis ipsum natus quas aperiam voluptates tempora expedita eos culpa optio libero quo minus sapiente
-      nulla. Unde impedit, aliquam eum sit molestiae culpa error, explicabo dolore eaque sequi ex temporibus iste
-      excepturi eveniet veritatis exercitationem fugit natus laudantium dicta sunt! Quo natus ut vel dolorum nemo nobis
-      qui laboriosam eum assumenda illo deleniti odit illum sed corrupti recusandae iusto molestias cum nulla provident,
-      minus in quod facilis reprehenderit rem?
-    </main>
+    <main class="main"></main>
 
     <footer class="footer"></footer>
   </div>
