--- a/index.html
+++ b/index.html
@@ -60,7 +60,97 @@
     </div>
   </header>
 
-  <main class="main"></main>
+  <main class="main">
+    <section class="hero" aria-labelledby="hero-title">
+      <div class="hero__main container">
+        <div class="hero__body">
+          <p class="hero__subtitle">Your Journey to Tomorrow Begins Here</p>
+          <h1 class="hero__title title title--accent" id="hero-title">Explore the Frontiers of Artificial Intelligence
+          </h1>
+          <div class="hero__description">
+            <p>Welcome to the epicenter of AI innovation. FutureTech AI News is your passport to a world where machines
+              think, learn, and reshape the future. Join us on this visionary expedition into the heart of AI.</p>
+          </div>
+        </div>
+        <div class="hero__metrics metrics full-vw-line full-vw-line--top full-vw-line--left">
+          <dl class="metrics__list">
+            <div class="metrics__item">
+              <dt class="metrics__key">Resources available</dt>
+              <dd class="metrics__value title title--bold">300<span class="metrics__value-sign">+</span></dd>
+            </div>
+            <div class="metrics__item">
+              <dt class="metrics__key">Total Downloads</dt>
+              <dd class="metrics__value title title--bold">12k<span class="metrics__value-sign">+</span></dd>
+            </div>
+            <div class="metrics__item">
+              <dt class="metrics__key">Active Users</dt>
+              <dd class="metrics__value title title--bold">10k<span class="metrics__value-sign">+</span></dd>
+            </div>
+          </dl>
+        </div>
+        <div class="hero__resources-preview resources-preview">
+          <div class="resources-preview__team team">
+            <img class="team__person" src="./img/team/1.png" alt="" aria-hidden="true" width="60" height="60"
+              loading="lazy">
+            <img class="team__person" src="./img/team/2.png" alt="" aria-hidden="true" width="60" height="60"
+              loading="lazy">
+            <img class="team__person" src="./img/team/3.png" alt="" aria-hidden="true" width="60" height="60"
+              loading="lazy">
+            <img class="team__person" src="./img/team/4.png" alt="" aria-hidden="true" width="60" height="60"
+              loading="lazy">
+          </div>
+          <div class="resources-preview__body">
+            <h2 class="resources-preview__title title">Explore 1000+ resources</h2>
+            <div class="resources-preview__description">
+              <p>Over 1,000 articles on emerging tech trends and breakthroughs.</p>
+            </div>
+          </div>
+          <a href="/" class="resources-preview__btn btn btn-reset">
+            <span class="icon icon--arrow-yellow">Explore Resources</span>
+          </a>
+        </div>
+      </div>
+      <div class="hero__advantages">
+        <div class="hero__advantages-inner container">
+          <ul class="list-reset hero__advantages-list">
+            <li class="hero__advantages-item">
+              <div class="advantages-card">
+                <img src="./img/advantages/icon-1.svg" class="advantages-card__img" alt="" aria-hidden="true" width="50"
+                  height="50" loading="lazy">
+                <a href="" class="advantages-card__link link">
+                  <h3 class="advantages-card__title title">Latest News Updates</h3>
+                  <p class="advantages-card__subtitle">Stay Current</p>
+                </a>
+                <p class="advantages-card__details">Over 1,000 articles published monthly</p>
+              </div>
+            </li>
+            <li class="hero__advantages-item">
+              <div class="advantages-card">
+                <img src="./img/advantages/icon-2.svg" class="advantages-card__img" alt="" aria-hidden="true" width="50"
+                  height="50" loading="lazy">
+                <a href="" class="advantages-card__link link">
+                  <h3 class="advantages-card__title title">Expert Contributors</h3>
+                  <p class="advantages-card__subtitle">Trusted Insights</p>
+                </a>
+                <p class="advantages-card__details">50+ renowned AI experts on our team</p>
+              </div>
+            </li>
+            <li class="hero__advantages-item">
+              <div class="advantages-card">
+                <img src="./img/advantages/icon-3.svg" class="advantages-card__img" alt="" aria-hidden="true" width="50"
+                  height="50" loading="lazy">
+                <a href="" class="advantages-card__link link">
+                  <h3 class="advantages-card__title title">Global Readership</h3>
+                  <p class="advantages-card__subtitle">Worldwide Impact</p>
+                </a>
+                <p class="advantages-card__details">2 million monthly readers</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+  </main>
 
   <footer class="footer">
     <div class="footer__inner container">
