--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <p class="hero__subtitle">Your Journey to Tomorrow Begins Here</p>
           <h1 class="hero__title title title--accent" id="hero-title">Explore the Frontiers of Artificial Intelligence
           </h1>
-          <div class="hero__description">
+          <div class="hero__description description">
             <p>Welcome to the epicenter of AI innovation. FutureTech AI News is your passport to a world where machines
               think, learn, and reshape the future. Join us on this visionary expedition into the heart of AI.</p>
           </div>
@@ -101,7 +101,7 @@
           </div>
           <div class="resources-preview__body">
             <h2 class="resources-preview__title title">Explore 1000+ resources</h2>
-            <div class="resources-preview__description">
+            <div class="resources-preview__description description">
               <p>Over 1,000 articles on emerging tech trends and breakthroughs.</p>
             </div>
           </div>
