add: features section implementation

--- a/index.html
+++ b/index.html
@@ -150,6 +150,99 @@
         </div>
       </div>
     </section>
+    <section class="section" aria-labelledby="features-title">
+      <header class="section__header">
+        <div class="section__header-inner container">
+          <div class="section__header-info">
+            <p class="section__subtitle tag">Unlock the Power of</p>
+            <h2 class="section__title title title--accent" id="features-title">FutureTech Features</h2>
+          </div>
+        </div>
+      </header>
+      <div class="section__body">
+        <ul class="list list-reset">
+          <li class="list__item">
+            <div class="card container">
+              <div class="card__preview">
+                <div class="card__preview-main">
+                  <img src="./img/features/1.svg" width="80" height="80" aria-hidden="true" alt=""
+                    class="card__preview-icon">
+                  <div class="card__preview-info">
+                    <h3 class="card__preview-title title title--accent title--bold">Future Technology Blog</h3>
+                    <div class="card__preview-description description">
+                      <p>Stay informed with our blog section dedicated to future technology.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card__body">
+                <div class="card__grid card__grid--2-cols">
+                  <div class="card__cell tile">
+                    <h4 class="card__cell-title title">Quantity</h4>
+                    <p class="card__cell-description description">Over 1,000 articles on emerging tech trends and
+                      breakthroughs.</p>
+                  </div>
+                  <div class="card__cell tile">
+                    <h4 class="card__cell-title title">Variety</h4>
+                    <p class="card__cell-description description">
+                      Articles cover fields like AI, robotics, biotechnology, and more.
+                    </p>
+                  </div>
+                  <div class="card__cell tile">
+                    <h4 class="card__cell-title title">Frequency</h4>
+                    <p class="card__cell-description description">Fresh content added daily to keep you up to date.</p>
+                  </div>
+                  <div class="card__cell tile">
+                    <h4 class="card__cell-title title">Authoritative</h4>
+                    <p class="card__cell-description description">
+                      Written by our team of tech experts and industry professionals.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="list__item">
+            <div class="card container">
+              <div class="card__preview">
+                <div class="card__preview-main">
+                  <img src="./img/features/2.svg" width="80" height="80" aria-hidden="true" alt=""
+                    class="card__preview-icon">
+                  <div class="card__preview-info">
+                    <h3 class="card__preview-title title title--accent title--bold">Research Insights Blogs</h3>
+                    <div class="card__preview-description description">
+                      <p>Dive deep into future technology concepts with our research section.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card__body">
+                <div class="card__grid card__grid--2-cols">
+                  <div class="card__cell tile">
+                    <h4 class="card__cell-title title">Depth</h4>
+                    <p class="card__cell-description description">500+ research articles for in-depth understanding.</p>
+                  </div>
+                  <div class="card__cell tile">
+                    <h4 class="card__cell-title title">Graphics</h4>
+                    <p class="card__cell-description description">Visual aids and infographics to enhance comprehension.
+                    </p>
+                  </div>
+                  <div class="card__cell tile">
+                    <h4 class="card__cell-title title">Trends</h4>
+                    <p class="card__cell-description description">Explore emerging trends in future technology research.
+                    </p>
+                  </div>
+                  <div class="card__cell tile">
+                    <h4 class="card__cell-title title">Contributors</h4>
+                    <p class="card__cell-description description">Contributions from tech researchers and academics.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
 
   <footer class="footer">
