add: resources section implementation

--- a/index.html
+++ b/index.html
@@ -830,7 +830,6 @@
              tabindex="0"
              data-tabs-content
         >
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero.
         </div>
         <div class="tabs__content"
              id="tabpanel-6"
@@ -838,9 +837,180 @@
              tabindex="0"
              data-tabs-content
         >
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero.
         </div>
       </div>
+    </div>
+  </section>
+  <section class="section" aria-labelledby="resources-title">
+    <header class="section__header">
+      <div class="section__header-inner container">
+        <div class="section__header-info">
+          <p class="section__subtitle tag">Your Gateway to In-Depth Information</p>
+          <h2 class="section__title title title--accent" id="resources-title">Unlock Valuable Knowledge with
+                                                                              FutureTech's Resources</h2>
+        </div>
+        <a class="section__link btn" href="/">
+          <span class="icon icon--arrow-yellow">View All Resources</span>
+        </a>
+      </div>
+    </header>
+    <div class="section__body">
+      <ul class="list list-reset">
+        <li class="list__item">
+          <div class="card container">
+            <div class="card__preview">
+              <div class="card__preview-main">
+                <img class="card__preview-icon" src="./img/resources/icon-1.svg" width="80" height="80" alt=""
+                     aria-hidden="true">
+                <div class="card__preview-info">
+                  <h3 class="card__preview-title title title--accent title--bold">Ebooks</h3>
+                  <div class="card__preview-description description">
+                    <p>Explore our collection of ebooks covering a wide spectrum of future technology topics.</p>
+                  </div>
+                </div>
+                <a class="card__preview-link btn btn-reset btn--light" href="/">
+                  <span class="icon icon--arrow-yellow">Download Ebooks Now</span>
+                </a>
+              </div>
+              <div class="card__preview-extra">
+                <div class="download-info tile">
+                  <div class="download-info__body">
+                    <p class="download-info__subtitle">Downloaded By</p>
+                    <h4 class="download-info__title title title--bold">10k + Users</h4>
+                  </div>
+                  <div class="download-info__team team">
+                    <img class="team__person" src="./img/team/1.png" width="50" height="50"
+                         loading="lazy" alt=""
+                         aria-hidden="true">
+                    <img class="team__person" src="./img/team/2.png" width="50" height="50"
+                         loading="lazy" alt=""
+                         aria-hidden="true">
+                    <img class="team__person" src="./img/team/3.png" width="50" height="50"
+                         loading="lazy" alt=""
+                         aria-hidden="true">
+                    <img class="team__person" src="./img/team/4.png" width="50" height="50"
+                         loading="lazy" alt=""
+                         aria-hidden="true">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card__body">
+              <div class="card__grid card__grid--2-cols-alt">
+                <div class="card__cell card__cell--small-gap">
+                  <h4 class="card__cell-title title title--bold">Variety of Topics</h4>
+                </div>
+                <div class="card__cell card__cell--small-gap">
+                  <p class="card__cell-description description">
+                    Topics include AI in education (25%), renewable energy (20%), healthcare (15%), space exploration
+                    (25%), and biotechnology (15%).
+                  </p>
+                </div>
+                <div class="card__cell card__cell-wide card__cell--small-gap">
+                  <img class="card__cell-img" src="./img/resources/details-1.jpg"
+                       width="917" height="332"
+                       alt=""
+                       aria-hidden="true"
+                  >
+                </div>
+                <div class="card__cell card__cell--small-gap tile">
+                  <p class="card__cell-subtitle">Total Ebooks</p>
+                  <h5 class="card__cell-title title title--bold">Over 100 ebooks</h5>
+                </div>
+                <div class="card__cell card__cell--small-gap tile">
+                  <p class="card__cell-subtitle">Download Formats</p>
+                  <h5 class="card__cell-title title title--bold">PDF format for access.</h5>
+                  <a class="card__cell-link btn btn-reset" href="/">
+                    <span class="icon icon--eye-yellow">Preview</span>
+                  </a>
+                </div>
+                <div class="card__cell card__cell-wide card__cell--small-gap tile">
+                  <p class="card__cell-subtitle">Average Author Expertise</p>
+                  <h5 class="card__cell-title title title--bold">Ebooks are authored by renowned experts with an average
+                                                                 of 15 years of experience</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="list__item">
+          <div class="card container">
+            <div class="card__preview">
+              <div class="card__preview-main">
+                <img class="card__preview-icon" src="./img/resources/icon-2.svg" width="80" height="80" alt=""
+                     aria-hidden="true">
+                <div class="card__preview-info">
+                  <h3 class="card__preview-title title title--accent title--bold">Whitepapers</h3>
+                  <div class="card__preview-description description">
+                    <p>Dive into comprehensive reports and analyses with our collection of whitepapers. </p>
+                  </div>
+                </div>
+                <a class="card__preview-link btn btn-reset btn--light" href="/">
+                  <span class="icon icon--arrow-yellow">Download Whitepapers Now</span>
+                </a>
+              </div>
+              <div class="card__preview-extra">
+                <div class="download-info tile">
+                  <div class="download-info__body">
+                    <p class="download-info__subtitle">Downloaded By</p>
+                    <h4 class="download-info__title title title--bold">10k + Users</h4>
+                  </div>
+                  <div class="download-info__team team">
+                    <img class="team__person" src="./img/team/5.png" width="50" height="50"
+                         loading="lazy" alt=""
+                         aria-hidden="true">
+                    <img class="team__person" src="./img/team/6.png" width="50" height="50"
+                         loading="lazy" alt=""
+                         aria-hidden="true">
+                    <img class="team__person" src="./img/team/7.png" width="50" height="50"
+                         loading="lazy" alt=""
+                         aria-hidden="true">
+                    <img class="team__person" src="./img/team/8.png" width="50" height="50"
+                         loading="lazy" alt=""
+                         aria-hidden="true">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card__body">
+              <div class="card__grid card__grid--2-cols-alt">
+                <div class="card__cell card__cell--small-gap">
+                  <h4 class="card__cell-title title title--bold">Topics Coverage</h4>
+                </div>
+                <div class="card__cell card__cell--small-gap">
+                  <p class="card__cell-description description">
+                    Whitepapers cover quantum computing (20%), AI ethics (15%), space mining prospects (20%), AI in
+                    healthcare (15%), and renewable energy strategies (30%).
+                  </p>
+                </div>
+                <div class="card__cell card__cell-wide card__cell--small-gap">
+                  <img class="card__cell-img" src="./img/resources/details-2.jpg"
+                       width="917" height="332"
+                       alt=""
+                       aria-hidden="true"
+                  >
+                </div>
+                <div class="card__cell card__cell--small-gap tile">
+                  <p class="card__cell-subtitle">Total Whitepapers</p>
+                  <h5 class="card__cell-title title title--bold">Over 50 whitepapers</h5>
+                </div>
+                <div class="card__cell card__cell--small-gap tile">
+                  <p class="card__cell-subtitle">Download Formats</p>
+                  <h5 class="card__cell-title title title--bold">PDF format for access.</h5>
+                  <a class="card__cell-link btn btn-reset" href="/">
+                    <span class="icon icon--eye-yellow">Preview</span>
+                  </a>
+                </div>
+                <div class="card__cell card__cell-wide card__cell--small-gap tile">
+                  <p class="card__cell-subtitle">Average Author Expertise</p>
+                  <h5 class="card__cell-title title title--bold">Whitepapers are authored by subject-matter experts with
+                                                                 an average of 20 years of experience.</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+      </ul>
     </div>
   </section>
 </main>
