--- a/index.html
+++ b/index.html
@@ -897,34 +897,34 @@
             </div>
             <div class="card__body">
               <div class="card__grid card__grid--2-cols-alt">
-                <div class="card__cell card__cell--small-gap">
+                <div class="card__cell">
                   <h4 class="card__cell-title title title--bold">Variety of Topics</h4>
                 </div>
-                <div class="card__cell card__cell--small-gap">
+                <div class="card__cell">
                   <p class="card__cell-description description">
                     Topics include AI in education (25%), renewable energy (20%), healthcare (15%), space exploration
                     (25%), and biotechnology (15%).
                   </p>
                 </div>
-                <div class="card__cell card__cell-wide card__cell--small-gap">
+                <div class="card__cell card__cell-wide">
                   <img class="card__cell-img" src="./img/resources/details-1.jpg"
                        width="917" height="332"
                        alt=""
                        aria-hidden="true"
                   >
                 </div>
-                <div class="card__cell card__cell--small-gap tile">
+                <div class="card__cell tile">
                   <p class="card__cell-subtitle">Total Ebooks</p>
                   <h5 class="card__cell-title title title--bold">Over 100 ebooks</h5>
                 </div>
-                <div class="card__cell card__cell--small-gap tile">
+                <div class="card__cell tile">
                   <p class="card__cell-subtitle">Download Formats</p>
                   <h5 class="card__cell-title title title--bold">PDF format for access.</h5>
                   <a class="card__cell-link btn btn-reset" href="/">
                     <span class="icon icon--eye-yellow">Preview</span>
                   </a>
                 </div>
-                <div class="card__cell card__cell-wide card__cell--small-gap tile">
+                <div class="card__cell card__cell-wide tile">
                   <p class="card__cell-subtitle">Average Author Expertise</p>
                   <h5 class="card__cell-title title title--bold">Ebooks are authored by renowned experts with an average
                                                                  of 15 years of experience</h5>
@@ -974,39 +974,206 @@
             </div>
             <div class="card__body">
               <div class="card__grid card__grid--2-cols-alt">
-                <div class="card__cell card__cell--small-gap">
+                <div class="card__cell">
                   <h4 class="card__cell-title title title--bold">Topics Coverage</h4>
                 </div>
-                <div class="card__cell card__cell--small-gap">
+                <div class="card__cell">
                   <p class="card__cell-description description">
                     Whitepapers cover quantum computing (20%), AI ethics (15%), space mining prospects (20%), AI in
                     healthcare (15%), and renewable energy strategies (30%).
                   </p>
                 </div>
-                <div class="card__cell card__cell-wide card__cell--small-gap">
+                <div class="card__cell card__cell-wide">
                   <img class="card__cell-img" src="./img/resources/details-2.jpg"
                        width="917" height="332"
                        alt=""
                        aria-hidden="true"
                   >
                 </div>
-                <div class="card__cell card__cell--small-gap tile">
+                <div class="card__cell tile">
                   <p class="card__cell-subtitle">Total Whitepapers</p>
                   <h5 class="card__cell-title title title--bold">Over 50 whitepapers</h5>
                 </div>
-                <div class="card__cell card__cell--small-gap tile">
+                <div class="card__cell tile">
                   <p class="card__cell-subtitle">Download Formats</p>
                   <h5 class="card__cell-title title title--bold">PDF format for access.</h5>
                   <a class="card__cell-link btn btn-reset" href="/">
                     <span class="icon icon--eye-yellow">Preview</span>
                   </a>
                 </div>
-                <div class="card__cell card__cell-wide card__cell--small-gap tile">
+                <div class="card__cell card__cell-wide tile">
                   <p class="card__cell-subtitle">Average Author Expertise</p>
                   <h5 class="card__cell-title title title--bold">Whitepapers are authored by subject-matter experts with
                                                                  an average of 20 years of experience.</h5>
                 </div>
               </div>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <section class="section" aria-labelledby="reviews-title">
+    <header class="section__header">
+      <div class="section__header-inner container">
+        <div class="section__header-info">
+          <p class="section__subtitle tag">What Our Readers Say</p>
+          <h2 class="section__title title title--accent" id="reviews-title">Real Words from Real Readers</h2>
+        </div>
+        <a class="section__link btn" href="/">
+          <span class="icon icon--arrow-yellow">View All Testimonials</span>
+        </a>
+      </div>
+    </header>
+    <div class="section__body">
+      <ul class="bordered-grid bordered-grid--3-cols list-reset container">
+        <li class="bordered-grid__item">
+          <div class="review-card">
+            <div class="review-card__author person-card">
+              <img class="person-card__img" src="./img/team/1.png" width="60" height="60" loading="lazy"
+                   alt="" aria-hidden="true">
+              <div class="person-card__body">
+                <p class="person-card__name title">Sarah Thompson</p>
+                <p class="person-card__department">San Francisco, USA</p>
+              </div>
+            </div>
+            <div class="review-card__body tile">
+              <div class="review-card__rating rating-view" title="Rating 5 star" aria-label="Rating 5 star">
+                <div class="rating-view__star is-active"></div>
+                <div class="rating-view__star is-active"></div>
+                <div class="rating-view__star is-active"></div>
+                <div class="rating-view__star is-active"></div>
+                <div class="rating-view__star is-active"></div>
+              </div>
+              <blockquote class="review-card__description description">
+                <p>The ebooks on AI in education have been a game-changer for my research. They provide in-depth
+                   insights and case studies that are invaluable for staying updated.</p>
+              </blockquote>
+            </div>
+          </div>
+        </li>
+        <li class="bordered-grid__item">
+          <div class="review-card">
+            <div class="review-card__author person-card">
+              <img class="person-card__img" src="./img/team/2.png" width="60" height="60" loading="lazy"
+                   alt="" aria-hidden="true">
+              <div class="person-card__body">
+                <p class="person-card__name title">Raj Patel</p>
+                <p class="person-card__department">Mumbai, India</p>
+              </div>
+            </div>
+            <div class="review-card__body tile">
+              <div class="review-card__rating rating-view" title="Rating 5 star" aria-label="Rating 5 star">
+                <div class="rating-view__star is-active"></div>
+                <div class="rating-view__star is-active"></div>
+                <div class="rating-view__star is-active"></div>
+                <div class="rating-view__star is-active"></div>
+                <div class="rating-view__star is-active"></div>
+              </div>
+              <blockquote class="review-card__description description">
+                <p>The whitepapers on renewable energy strategies have greatly influenced my work. They offer detailed
+                   data and analysis, helping me make informed decisions.</p>
+              </blockquote>
+            </div>
+          </div>
+        </li>
+        <li class="bordered-grid__item">
+          <div class="review-card">
+            <div class="review-card__author person-card">
+              <img class="person-card__img" src="./img/team/3.png" width="60" height="60" loading="lazy"
+                   alt="" aria-hidden="true">
+              <div class="person-card__body">
+                <p class="person-card__name title">Emily Adams</p>
+                <p class="person-card__department">London, UK</p>
+              </div>
+            </div>
+            <div class="review-card__body tile">
+              <div class="review-card__rating rating-view" title="Rating 5 star" aria-label="Rating 5 star">
+                <div class="rating-view__star is-active"></div>
+                <div class="rating-view__star is-active"></div>
+                <div class="rating-view__star is-active"></div>
+                <div class="rating-view__star is-active"></div>
+                <div class="rating-view__star is-active"></div>
+              </div>
+              <blockquote class="review-card__description description">
+                <p>The AI in healthcare reports have been an essential resource for our hospital. They highlight the
+                   latest innovations and best practices, improving patient care.</p>
+              </blockquote>
+            </div>
+          </div>
+        </li>
+        <li class="bordered-grid__item">
+          <div class="review-card">
+            <div class="review-card__author person-card">
+              <img class="person-card__img" src="./img/team/4.png" width="60" height="60" loading="lazy"
+                   alt="" aria-hidden="true">
+              <div class="person-card__body">
+                <p class="person-card__name title">Alan Jackson</p>
+                <p class="person-card__department">Houston, USA</p>
+              </div>
+            </div>
+            <div class="review-card__body tile">
+              <div class="review-card__rating rating-view" title="Rating 5 star" aria-label="Rating 5 star">
+                <div class="rating-view__star is-active"></div>
+                <div class="rating-view__star is-active"></div>
+                <div class="rating-view__star is-active"></div>
+                <div class="rating-view__star is-active"></div>
+                <div class="rating-view__star is-active"></div>
+              </div>
+              <blockquote class="review-card__description description">
+                <p>The reports on space mining prospects have fueled my passion for space exploration. They provide a
+                   comprehensive view of what lies beyond Earth.</p>
+              </blockquote>
+            </div>
+          </div>
+        </li>
+        <li class="bordered-grid__item">
+          <div class="review-card">
+            <div class="review-card__author person-card">
+              <img class="person-card__img" src="./img/team/5.png" width="60" height="60" loading="lazy"
+                   alt="" aria-hidden="true">
+              <div class="person-card__body">
+                <p class="person-card__name title">Jessica Miller</p>
+                <p class="person-card__department">Boston, USA</p>
+              </div>
+            </div>
+            <div class="review-card__body tile">
+              <div class="review-card__rating rating-view" title="Rating 5 star" aria-label="Rating 5 star">
+                <div class="rating-view__star is-active"></div>
+                <div class="rating-view__star is-active"></div>
+                <div class="rating-view__star is-active"></div>
+                <div class="rating-view__star is-active"></div>
+                <div class="rating-view__star is-active"></div>
+              </div>
+              <blockquote class="review-card__description description">
+                <p>The research papers on genomic breakthroughs have been a goldmine of information. They've shaped the
+                   direction of my research in genomics.</p>
+              </blockquote>
+            </div>
+          </div>
+        </li>
+        <li class="bordered-grid__item">
+          <div class="review-card">
+            <div class="review-card__author person-card">
+              <img class="person-card__img" src="./img/team/6.png" width="60" height="60" loading="lazy"
+                   alt="" aria-hidden="true">
+              <div class="person-card__body">
+                <p class="person-card__name title">Diego Lopez</p>
+                <p class="person-card__department">Barcelona, Spain</p>
+              </div>
+            </div>
+            <div class="review-card__body tile">
+              <div class="review-card__rating rating-view" title="Rating 5 star" aria-label="Rating 5 star">
+                <div class="rating-view__star is-active"></div>
+                <div class="rating-view__star is-active"></div>
+                <div class="rating-view__star is-active"></div>
+                <div class="rating-view__star is-active"></div>
+                <div class="rating-view__star is-active"></div>
+              </div>
+              <blockquote class="review-card__description description">
+                <p>The ebooks on renewable energy strategies have given me the insights I needed to pivot our startup
+                   toward sustainability.</p>
+              </blockquote>
             </div>
           </div>
         </li>
