--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="advantages-card">
               <img class="advantages-card__img" src="./img/advantages/icon-1.svg" width="50" height="50" loading="lazy"
                    alt="" aria-hidden="true">
-              <a class="advantages-card__link link" href="">
+              <a class="advantages-card__link circle-icon link" href="">
                 <h3 class="advantages-card__title title">Latest News Updates</h3>
                 <p class="advantages-card__subtitle">Stay Current</p>
               </a>
@@ -128,7 +128,7 @@
             <div class="advantages-card">
               <img class="advantages-card__img" src="./img/advantages/icon-2.svg" width="50" height="50" loading="lazy"
                    alt="" aria-hidden="true">
-              <a class="advantages-card__link link" href="">
+              <a class="advantages-card__link circle-icon link" href="">
                 <h3 class="advantages-card__title title">Expert Contributors</h3>
                 <p class="advantages-card__subtitle">Trusted Insights</p>
               </a>
@@ -139,7 +139,7 @@
             <div class="advantages-card">
               <img class="advantages-card__img" src="./img/advantages/icon-3.svg" width="50" height="50" loading="lazy"
                    alt="" aria-hidden="true">
-              <a class="advantages-card__link link" href="">
+              <a class="advantages-card__link circle-icon link" href="">
                 <h3 class="advantages-card__title title">Global Readership</h3>
                 <p class="advantages-card__subtitle">Worldwide Impact</p>
               </a>
@@ -155,7 +155,7 @@
       <div class="section__header-inner container">
         <div class="section__header-info">
           <p class="section__subtitle tag">Unlock the Power of</p>
-          <h2 class="section__title title title--accent" id="features-title">FutureTech Features</h2>
+          <h2 class="section__title title--section title title--accent" id="features-title">FutureTech Features</h2>
         </div>
       </div>
     </header>
@@ -248,7 +248,8 @@
       <div class="section__header-inner container">
         <div class="section__header-info">
           <p class="section__subtitle tag">A Knowledge Treasure Trove</p>
-          <h2 class="section__title title title--accent" id="blog-title">Explore FutureTech's In-Depth Blog posts</h2>
+          <h2 class="section__title title--section title title--accent" id="blog-title">Explore FutureTech's In-Depth
+                                                                                        Blog posts</h2>
         </div>
         <a class="section__link btn" href="/">
           <span class="icon icon--arrow-yellow">View All Blogs</span>
@@ -1018,7 +1019,8 @@
       <div class="section__header-inner container">
         <div class="section__header-info">
           <p class="section__subtitle tag">What Our Readers Say</p>
-          <h2 class="section__title title title--accent" id="reviews-title">Real Words from Real Readers</h2>
+          <h2 class="section__title title--section title title--accent" id="reviews-title">Real Words from Real
+                                                                                           Readers</h2>
         </div>
         <a class="section__link btn" href="/">
           <span class="icon icon--arrow-yellow">View All Testimonials</span>
@@ -1176,6 +1178,58 @@
               </blockquote>
             </div>
           </div>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <section class="about" aria-labelledby="about-title">
+    <div class="about__inner container">
+      <header class="about__header">
+        <img class="about__icon"
+             src="./img/about/icon-1.svg"
+             width="150" height="150"
+             loading="lazy"
+             alt="" aria-hidden="true"
+        >
+        <div class="about__info">
+          <p class="about__subtitle tag">Learn, Connect, and Innovate</p>
+          <h2 class="about__title title title--accent section title--section" id="about-title">Be Part of the Future
+                                                                                               Tech
+                                                                                               Revolution</h2>
+        </div>
+        <div class="about__description description">
+          <p>Immerse yourself in the world of future technology. Explore our comprehensive resources, connect with
+             fellow tech enthusiasts, and drive innovation in the industry. Join a dynamic community of
+             forward-thinkers.</p>
+        </div>
+      </header>
+      <ul class="about__list list-reset">
+        <li class="about__item">
+          <a class="about-card tile link" href="/" aria-labelledby="about-card-title-first">
+            <h3 class="about-card__title circle-icon title title--bold" id="about-card-title-first">Resource
+                                                                                                    Access</h3>
+            <div class="about-card__description description">
+              <p>Visitors can access a wide range of resources, including ebooks, whitepapers, reports.</p>
+            </div>
+          </a>
+        </li>
+        <li class="about__item">
+          <a class="about-card tile link" href="/" aria-labelledby="about-card-title-second">
+            <h3 class="about-card__title circle-icon title title--bold" id="about-card-title-second">Community
+                                                                                                     Forum</h3>
+            <div class="about-card__description description">
+              <p>Join our active community forum to discuss industry trends, share insights, and collaborate with
+                 peers.</p>
+            </div>
+          </a>
+        </li>
+        <li class="about__item">
+          <a class="about-card tile link" href="/" aria-labelledby="about-card-title-third">
+            <h3 class="about-card__title circle-icon title title--bold" id="about-card-title-third">Tech Events</h3>
+            <div class="about-card__description description">
+              <p>Stay updated on upcoming tech events, webinars, and conferences to enhance your knowledge.</p>
+            </div>
+          </a>
         </li>
       </ul>
     </div>
