add: news page and heroalt

--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
         <nav class="header__menu">
           <ul class="header__menu-list list-reset">
             <li class="header__menu-item">
-              <a class="header__menu-link link is-active" href="/">Home</a>
+              <a class="header__menu-link link is-active" href="./index.html">Home</a>
             </li>
             <li class="header__menu-item">
-              <a class="header__menu-link link" href="/">News</a>
+              <a class="header__menu-link link" href="./news.html">News</a>
             </li>
             <li class="header__menu-item">
-              <a class="header__menu-link link" href="/">Podcasts</a>
+              <a class="header__menu-link link" href="./podcasts.html">Podcasts</a>
             </li>
             <li class="header__menu-item">
-              <a class="header__menu-link link" href="/">Resources</a>
+              <a class="header__menu-link link" href="./resources.html">Resources</a>
             </li>
           </ul>
         </nav>
-        <a class="btn-reset header__contacts btn btn--accent" href="/">Contact Us</a>
+        <a class="btn-reset header__contacts btn btn--accent" href="./contacts.html">Contact Us</a>
       </div>
       <button class="header__burger-btn burger-btn btn-reset link visible-mobile"
               title="Open menu" aria-label="Open menu"
@@ -251,7 +251,7 @@
           <h2 class="section__title title--section title title--accent" id="blog-title">Explore FutureTech's In-Depth
                                                                                         Blog posts</h2>
         </div>
-        <a class="section__link btn" href="/">
+        <a class="section__link btn" href="./blog.html">
           <span class="icon icon--arrow-yellow">View All Blogs</span>
         </a>
       </div>
