--- a/podcasts.html
+++ b/podcasts.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="ie=edge" http-equiv="X-UA-Compatible">
-  <title>Future Tech | Blogs</title>
+  <title>Future Tech | News</title>
   <link href="fonts/Inter-Bold.woff2" as="font" crossorigin rel="preload" type="font/woff2">
   <link href="fonts/Inter-Medium.woff2" as="font" crossorigin rel="preload" type="font/woff2">
   <link href="fonts/Inter-SemiBold.woff2" as="font" crossorigin rel="preload" type="font/woff2">
