add: resources page + minor fixes for all site

--- a/index.html
+++ b/index.html
@@ -251,9 +251,11 @@
           <h2 class="section__title title--section title title--accent" id="blog-title">Explore FutureTech's In-Depth
                                                                                         Blog posts</h2>
         </div>
-        <a class="section__link btn" href="./blog.html">
-          <span class="icon icon--arrow-yellow">View All Blogs</span>
-        </a>
+        <div class="section__actions">
+          <a class="section__link btn" href="./blog.html">
+            <span class="icon icon--arrow-yellow">View All Blogs</span>
+          </a>
+        </div>
       </div>
     </header>
     <div class="section__body tabs" data-tabs>
@@ -850,9 +852,11 @@
           <h2 class="section__title title title--accent" id="resources-title">Unlock Valuable Knowledge with
                                                                               FutureTech's Resources</h2>
         </div>
-        <a class="section__link btn" href="/">
-          <span class="icon icon--arrow-yellow">View All Resources</span>
-        </a>
+        <div class="section__actions">
+          <a class="section__link btn" href="./resources.html">
+            <span class="icon icon--arrow-yellow">View All Resources</span>
+          </a>
+        </div>
       </div>
     </header>
     <div class="section__body">
@@ -907,7 +911,7 @@
                     (25%), and biotechnology (15%).
                   </p>
                 </div>
-                <div class="card__cell card__cell-wide">
+                <div class="card__cell card__cell--wide">
                   <img class="card__cell-img" src="./img/resources/details-1.jpg"
                        width="917" height="332"
                        alt=""
@@ -925,10 +929,10 @@
                     <span class="icon icon--eye-yellow">Preview</span>
                   </a>
                 </div>
-                <div class="card__cell card__cell-wide tile">
+                <div class="card__cell card__cell--wide tile">
                   <p class="card__cell-subtitle">Average Author Expertise</p>
-                  <h5 class="card__cell-title title title--bold">Ebooks are authored by renowned experts with an average
-                                                                 of 15 years of experience</h5>
+                  <h5 class="card__cell-title title">Ebooks are authored by renowned experts with an average
+                                                     of 15 years of experience</h5>
                 </div>
               </div>
             </div>
@@ -984,7 +988,7 @@
                     healthcare (15%), and renewable energy strategies (30%).
                   </p>
                 </div>
-                <div class="card__cell card__cell-wide">
+                <div class="card__cell card__cell--wide">
                   <img class="card__cell-img" src="./img/resources/details-2.jpg"
                        width="917" height="332"
                        alt=""
@@ -1002,10 +1006,10 @@
                     <span class="icon icon--eye-yellow">Preview</span>
                   </a>
                 </div>
-                <div class="card__cell card__cell-wide tile">
+                <div class="card__cell card__cell--wide tile">
                   <p class="card__cell-subtitle">Average Author Expertise</p>
-                  <h5 class="card__cell-title title title--bold">Whitepapers are authored by subject-matter experts with
-                                                                 an average of 20 years of experience.</h5>
+                  <h5 class="card__cell-title title">Whitepapers are authored by subject-matter experts with
+                                                     an average of 20 years of experience.</h5>
                 </div>
               </div>
             </div>
@@ -1022,9 +1026,11 @@
           <h2 class="section__title title--section title title--accent" id="reviews-title">Real Words from Real
                                                                                            Readers</h2>
         </div>
-        <a class="section__link btn" href="/">
-          <span class="icon icon--arrow-yellow">View All Testimonials</span>
-        </a>
+        <div class="section__actions">
+          <a class="section__link btn" href="/">
+            <span class="icon icon--arrow-yellow">View All Testimonials</span>
+          </a>
+        </div>
       </div>
     </header>
     <div class="section__body">
