--- a/news.html
+++ b/news.html
@@ -334,9 +334,11 @@
           <h2 class="section__title title--section title title--accent" id="news-tabs-title">Discover the World of
                                                                                              Headlines</h2>
         </div>
-        <a class="section__link btn" href="./blog.html">
-          <span class="icon icon--arrow-yellow">View All News</span>
-        </a>
+        <div class="section__actions">
+          <a class="section__link btn" href="./news.html">
+            <span class="icon icon--arrow-yellow">View All News</span>
+          </a>
+        </div>
       </div>
     </header>
     <div class="section__body tabs" data-tabs>
@@ -935,9 +937,11 @@
           <h2 class="section__title title--section title title--accent" id="videos-title">Visual Insights for the Modern
                                                                                           Viewer</h2>
         </div>
-        <a class="section__link btn" href="/">
-          <span class="icon icon--arrow-yellow">View All</span>
-        </a>
+        <div class="section__actions">
+          <a class="section__link btn" href="/">
+            <span class="icon icon--arrow-yellow">View All</span>
+          </a>
+        </div>
       </div>
     </header>
     <div class="section__body">
