--- a/podcasts.html
+++ b/podcasts.html
@@ -108,7 +108,7 @@
             </div>
             <div class="card__body">
               <div class="card__grid card__grid--3-cols">
-                <div class="card__cell card__cell-wide">
+                <div class="card__cell card__cell--wide">
                   <div class="video-card">
                     <div class="video-player" data-video-player>
                       <video class="video-player__video" src="./videos/sample.mp4"
@@ -132,7 +132,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="card__cell card__cell-wide">
+                <div class="card__cell card__cell--wide">
                   <h3 class="card__cell-title title title--bold">Delves into the transformative impact of AI</h3>
                   <div class="card__cell-description description">
                     <p>Join Dr. Sarah Mitchell as she delves into the transformative impact of AI on industries,
@@ -192,7 +192,7 @@
             </div>
             <div class="card__body">
               <div class="card__grid card__grid--3-cols">
-                <div class="card__cell card__cell-wide">
+                <div class="card__cell card__cell--wide">
                   <div class="video-card">
                     <div class="video-player" data-video-player>
                       <video class="video-player__video" src="./videos/sample.mp4"
@@ -216,7 +216,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="card__cell card__cell-wide">
+                <div class="card__cell card__cell--wide">
                   <h3 class="card__cell-title title title--bold">Engage in thought-provoking conversations with leading
                                                                  experts.</h3>
                   <div class="card__cell-description description">
