--- a/index.html
+++ b/index.html
@@ -849,8 +849,9 @@
       <div class="section__header-inner container">
         <div class="section__header-info">
           <p class="section__subtitle tag">Your Gateway to In-Depth Information</p>
-          <h2 class="section__title title title--accent" id="resources-title">Unlock Valuable Knowledge with
-                                                                              FutureTech's Resources</h2>
+          <h2 class="section__title title title--section title--accent" id="resources-title">Unlock Valuable Knowledge
+                                                                                             with
+                                                                                             FutureTech's Resources</h2>
         </div>
         <div class="section__actions">
           <a class="section__link btn" href="./resources.html">
