--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="ie=edge" http-equiv="X-UA-Compatible">
   <title>Future Tech | Home</title>
+  <link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+  <link href="/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
+  <link href="/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
+  <link href="/site.webmanifest" rel="manifest">
   <link href="fonts/Inter-Bold.woff2" as="font" crossorigin rel="preload" type="font/woff2">
   <link href="fonts/Inter-Medium.woff2" as="font" crossorigin rel="preload" type="font/woff2">
   <link href="fonts/Inter-SemiBold.woff2" as="font" crossorigin rel="preload" type="font/woff2">
